--- a/FundooNotesProject/BusinessLayer/BusinessLayer.csproj
+++ b/FundooNotesProject/BusinessLayer/BusinessLayer.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.8" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.1.4" />
   </ItemGroup>
 
   <ItemGroup>
