--- a/FundooNotesProject/CommonLayer/CommonLayer.csproj
+++ b/FundooNotesProject/CommonLayer/CommonLayer.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Experimental.System.Messaging" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.8" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.1.4" />
   </ItemGroup>
 
 </Project>
