--- a/FundooNotesProject/FundooNotesApplication/nlog.config
+++ b/FundooNotesProject/FundooNotesApplication/nlog.config
@@ -1,12 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<targets>
-		<target name="logfile" xsi:type="File" fileName="${basedir}/Logs/fundoo_${shortdate}.log" layout="[${longdate}] [${level:uppercase=true}] [${logger}] ${message} ${exception:format=tostring}" archiveNumbering="Sequence" archiveAboveSize="10000000"/>
-		<target name="errorlogfile" xsi:type="File" fileName="${basedir}/Logs/fundooError_${shortdate}.log" layout="[${longdate}] [${level:uppercase=true}] [${logger}] ${message} ${exception:format=tostring}" archiveNumbering="Sequence" archiveAboveSize="10000000"/>
-		<target name="logconsole" xsi:type="Console" />
+<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
+      autoReload="true"
+      throwExceptions="false"
+      internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
+
+
+
+	<variable name="LogDirectory" value="${gdc:LogDirectory}"></variable>
+	<targets >
+
+		<target  name="logfile" xsi:type="File" fileName="${LogDirectory}/${shortdate}.log"
+			 layout="${longdate} ${uppercase:${level}} ${message}"/>
+		<target name="logconsole" xsi:type="ColoredConsole"
+			 layout="${longdate} ${uppercase:${level}} ${message}"/>
+
 	</targets>
+
 	<rules>
-		<logger name="" minlevel="Info" maxlevel="Warning" writeTo="logfile" />
-		<logger name="" minlevel="Error" maxlevel="Fatal" writeTo="errorlogfile" />
+
+		<logger name="*" minlevel="Information" writeTo="logconsole" />
+		<logger name="*" minlevel="Information" writeTo="logfile" />
 	</rules>
 </nlog>
